--- a/Dockerfile.octane
+++ b/Dockerfile.octane
@@ -8,7 +8,7 @@ RUN apk add --no-cache git curl tzdata bash libstdc++ libzip-dev icu-dev     oni
 RUN docker-php-ext-configure gd --with-jpeg --with-webp --with-freetype  && docker-php-ext-install pdo pdo_mysql mbstring zip gd intl opcache
 
 # Install Swoole (without async/coroutine hooks that require extra libs)
-RUN pecl install swoole  && docker-php-ext-enable swoole
+RUN docker-php-ext-install pcntl && pecl install swoole  && docker-php-ext-enable swoole
 
 # Composer
 COPY --from=composer:2 /usr/bin/composer /usr/bin/composer
