--- a/docker-compose.octane.dev.yml
+++ b/docker-compose.octane.dev.yml
@@ -1,4 +1,3 @@
-version: "3.9"
 services:
   octane:
     build:
@@ -10,7 +9,7 @@ services:
     image: laravel-octane-dev:8.3
     container_name: laravel-octane
     volumes:
-      - ./:/var/www/html
+      - ./app:/var/www/html
     depends_on:
       - db
       - redis
@@ -21,7 +20,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./:/var/www/html
+      - ./app:/var/www/html
       - ./docker/nginx.octane.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - octane
@@ -29,7 +28,6 @@ services:
   db:
     image: mysql:8.4
     container_name: laravel-db
-    command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3307:3306"
     environment:
