--- a/docker-compose.octane.init.yml
+++ b/docker-compose.octane.init.yml
@@ -11,7 +11,7 @@ services:
     image: laravel-octane-dev:init
     container_name: laravel-octane-init
     volumes:
-      - ./:/var/www/html
+      - ./app:/var/www/html
     command: ["sh", "-lc", "sleep infinity"]
     depends_on:
       - db
@@ -23,7 +23,7 @@ services:
     ports:
       - "8080:80"
     volumes:
-      - ./:/var/www/html
+      - ./app:/var/www/html
       - ./docker/nginx.octane.conf:/etc/nginx/conf.d/default.conf:ro
     depends_on:
       - octane
@@ -31,7 +31,6 @@ services:
   db:
     image: mysql:8.4
     container_name: laravel-db
-    command: --default-authentication-plugin=mysql_native_password
     ports:
       - "3307:3306"
     environment:
