Add Docker support for FrankenPHP with multi-stage builds and development scripts

--- a/Dockerfile.octane
+++ b/Dockerfile.octane
@@ -22,8 +22,7 @@ RUN {   echo "opcache.enable=1";   echo "opcache.enable_cli=1";   echo "opcache.
 FROM base AS dev
 # Node for Vite dev (optional). You can comment these two lines if you run node separately.
 RUN apk add --no-cache nodejs npm
-CMD ["php", "artisan", "octane:start", "--server=swoole", "--host=0.0.0.0", "--port=8000", "--watch"]
-
+CMD ["bash","-lc","test -x /usr/local/bin/dev-start.sh && /usr/local/bin/dev-start.sh || php artisan octane:start --server=frankenphp --host=0.0.0.0 --port=8000 --watch"]
 # ---------- Build assets stage ----------
 FROM node:20-alpine AS asset-builder
 WORKDIR /app
@@ -54,4 +53,4 @@ COPY --from=asset-builder /app/public/build ./public/build 2>/dev/null || true
 RUN php artisan storage:link || true  && php artisan config:cache  && php artisan route:cache  && php artisan view:cache
 
 EXPOSE 8000
-CMD ["php", "artisan", "octane:start", "--server=swoole", "--host=0.0.0.0", "--port=8000", "--workers=4", "--task-workers=4"]
+CMD ["bash","-lc","php artisan config:clear && php artisan config:cache && php artisan octane:start --server=swoole --host=0.0.0.0 --port=8000 --workers=4 --task-workers=4"]
