--- a/docker-compose.franken.dev.yml
+++ b/docker-compose.franken.dev.yml
@@ -2,12 +2,11 @@ services:
   octane:
     build:
       context: .
-      dockerfile: Dockerfile.octane
+      dockerfile: Dockerfile.franken
       target: dev
-      args:
-        PHP_VERSION: "8.3"
-    image: laravel-octane-dev:8.3
-    container_name: laravel-octane
+    container_name: laravel-franken-dev
+    ports:
+      - "8080:8000"   # http://localhost:8080
     environment:
       DB_CONNECTION: mysql
       DB_HOST: db
@@ -17,33 +16,23 @@ services:
       DB_PASSWORD: laravel
     volumes:
       - ./app:/var/www/html
-      - ./docker/dev-start.sh:/usr/local/bin/dev-start.sh:ro
-    command: ["bash","-lc","/usr/local/bin/dev-start.sh"]
+      - ./docker/dev-start-franken.sh:/usr/local/bin/dev-start-franken.sh:ro
     depends_on:
-      - db
-      - redis
-
-  web:
-    image: nginx:1.27-alpine
-    container_name: laravel-octane-web
-    ports:
-      - "8080:80"
-    volumes:
-      - ./app:/var/www/html
-      - ./docker/nginx.octane.conf:/etc/nginx/conf.d/default.conf:ro
-    depends_on:
-      - octane
+      db:
+        condition: service_started
+      redis:
+        condition: service_started
 
   db:
     image: mysql:8.4
     container_name: laravel-db
-    ports:
-      - "3307:3306"
     environment:
       MYSQL_DATABASE: laravel
       MYSQL_USER: laravel
       MYSQL_PASSWORD: laravel
       MYSQL_ROOT_PASSWORD: root
+    ports:
+      - "3307:3306"
     volumes:
       - dbdata:/var/lib/mysql
 
